apps/multilang-nodejs/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multilang-nodejs
  namespace: dev
  labels:
    backstage.io/kubernetes-id: multilang-nodejs
spec:
  selector:
    app: multilang-nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
